--- a/angular.json
+++ b/angular.json
@@ -75,7 +75,10 @@
               "buildTarget": "wild-blog:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "port": 4201
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
